@@ -37,8 +37,8 @@
 #   environments. Patches to improve the portability are always welcome.
 
 
-.PHONY: all dirs js skins robots chmod chmod-tladmin multi-stop multi-start multi-restart\
-	sql-import update-2.10 update-2.11 update-2.12 update-2.13 update-2.14 update-2.15 update-2.16 update-2.17
+.PHONY: all dirs js skins robots chmod chmod-tladmin multi-stop multi-start multi-restart sql-import\
+	update-2.10 update-2.11 update-2.12 update-2.13 update-2.14 update-2.15 update-2.16 update-2.17 update-2.18
 
 all: dirs js skins robots data/config.pl
 
@@ -167,4 +167,9 @@ update-2.16: all
 update-2.17: all
 	$(multi-stop)
 	${runpsql} < util/updates/update_2.17.sql
+	$(multi-start)
+
+update-2.18: all
+	$(multi-stop)
+	${runpsql} < util/updates/update_2.18.sql
 	$(multi-start)
