@@ -99,6 +99,7 @@ our %S = (%S,
     [ '1280x800',     '_scrres_ws' ],
     [ '1920x1080',    '_scrres_ws' ],
   ],
+  tag_categories  => [ qw|cont ero tech| ],
   voiced          => [ 0..4 ],
   animated        => [ 0..4 ],
   wishlist_status => [ 0..3 ],
