@@ -1,4 +1,5 @@
 2.18 -
+	- Added category field to tags (content/ero/technical)
 
 2.17 - 2011-02-04
 	- Allow moderators to overrule VN tag votes
